<resources>
    <string name="app_name">Homework</string>
    <string name="action_settings">Settings</string>
    <string name="change_contact">CHANGE CONTACT</string>
    <string name="change_sound">CHANGE SOUND</string>
    <string name="contact">contact</string>
    <string name="OK">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="sound_5">e</string>
    <string name="sound_4">d</string>
    <string name="sound_3">c</string>
    <string name="sound_2">b</string>
    <string name="sound_1">a</string>
</resources>
